modules/gdscript/tests/scripts/analyzer/errors/nested_typed_array_incompatible_literal.gd
func test():
	var arr: Array[Array[int]] = [["wrong"]]
	print(arr)
